src/index.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

ul ol {
  padding: 0;
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: #e80505;
  font-weight: 100;
}

input {
  border: 1px solid #b6b6b6;
  margin: 0 auto;
  color: #0a0a0a;
  border-radius: 10px;
  -webkit-border-radius: 10px;
  -webkit-appearance: none;
}

input:focus {
  outline-offset: 0;
}

.nav {
  display: flex;
  flex-direction: row;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
}

.nav li {
  margin: auto;
}

.nav button {
  color: #000000;
  border-color: #0a0a0a;
  background: #ffffff;
  border: solid;
  border-width: 1px;
  font-size: 14px;
  font-weight: 200;
  border-radius: 3px;
  height: 30px;
  width: 70px;
}

.nav button:hover:enabled {
  color: #ffffff;
  background: #0a0a0a;
}

.nav button:active {
  transform: translateY(1px);
}

#nav-logo {
  border: none;
  color: #0a0a0a
}

.button {
  color: #e6e6e6;
  background: #0a0a0a;
  border: none;
  font-size: 16px;
  border-radius: 3px;
  height: 38px;
  width: 150px;
  padding: 7px 0;
  margin: 10px auto;
}

.button:active {
  transform: translateY(1px);
}

.active {
  font-weight: bold;
  border-bottom: 3px solid #e80505;
}

.completeLogo {
  display: inline;
}

.logo {
  height: 30px;
  width: 30px;
  vertical-align: middle;
}

.logotype {
  font-weight: 700;
  display: inline;
  vertical-align: middle;
}

.button:hover:enabled {
  background: linear-gradient(#1a1a1a, #0a0a0a);
  color: #fff;
  text-decoration: none;
}

.button:active {
  transform: translateY(1px);
}

div .conversations {
  display: flex;
  flex-direction: column;
}

div .conversation-cell {
  display: grid;
  grid-template-columns: 70px repeat(3, 1fr) 15px;
  grid-template-rows: repeat(6, 10px);
  padding: 7px;
  margin: 5px;
}

div .conversation-avatar {
  grid-row: 1 / end;
  grid-column: 1 / 2;
  border-radius: 50%;
  height: 60px;
}

div .conversation-body {
  grid-column: 2 / 8;
  grid-row: 3 / end;
  color: #797979;
  font-weight: 200;
  font-size: 16px;
}

div .conversation-name {
  grid-column: 2 / 7;
  grid-row: 1;
  font-weight: 500;
  font-size: 16px;
  color: #000000;
}

.conversation-arrow {
  height: 15px;
  grid-row: 3;
  grid-column: 9;
  fill: #cecdcd;
}

.conversation-timestamp {
  font-size: 14px;
  grid-row: 1;
  grid-column: 8 / end;
  color: #b6b6b6;
  justify-content: end;
}

hr {
  border: 0;
  height: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  margin: 0;
}

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  overflow: hidden;
  position: fixed;
}

#root {
  height: 100%;
}

.wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
  min-width: 320px;
}

.header {
  background-image: linear-gradient(to bottom, #ffffff, #fefefe, #fcfdfc, #fbfbfb, #fafafa);
}

.footer {
  padding-top: 0;
  background: #fafafa;
}

.chat-form {
  display: inline-flex;
  flex-direction: row;
  width: 100%;
  padding: 5px;
}

.chat-input {
  font-size: 16px;
  flex-grow: 1;
  padding: 5px;
}

.chat-submit-button {
  color: #e80505;
  background: #e80505;
  border: 3px solid #bbbbbb;
  width: 35px;
  height: 35px;
  font-size: 15px;
  font-weight: 900;
  border-radius: 50%;
  justify-content: center;
  margin-left: 5px;
  margin-right: 10px;
  vertical-align: middle;
}

.chat-submit-button:disabled {
  opacity: 0.4;
}

.chat-submit-button:active {
  transform: translateY(1px);
}

.content {
  flex: 1;
  overflow: auto;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.home-container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  padding: 10px;
  max-width: 500px;
  margin: 0 auto;
}

.new-chat-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.new-chat-input {
  font-size: 16px;
  width: 130px;
  max-height: 500px;
  margin: 5px;
  padding: 5px;
  align-self: center;
}

.new-chat {
  margin: 10%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.bubble-wrap {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 7px;
  padding-bottom: 7px;
  display: flex;
  flex-direction: column;
}

.bubble-username {
  font-weight: 700;
  padding-bottom: 5px;
}

.bubble-body {
  background: linear-gradient(#FF4136, #e80505);
  max-width: 300px;
  padding: 12px;
  word-break: keep-all;
}

.bubble-timestamp {
  color: grey;
  font-size: 13px;
  white-space: nowrap;
}

.bubble-list {
  display: flex;
  flex-direction: column;
}

.bubble-left {
  align-self: flex-start;
}

.bubble-right {
  align-self: flex-end;  
}

.bubble-left > .bubble-body {
  border-radius: 15px 15px 15px 0;
  border: 1px solid rgb(213, 213, 213);
  background-image: linear-gradient(to bottom, #ffffff, #fefefe, #fcfdfc, #fbfbfb, #fafafa);
  color: black;
  align-self: flex-start;
}

.bubble-left > .bubble-username {
  text-align: left;
  padding-left: 5px;
}

.bubble-right > .bubble-username {
  padding-right: 5px;
  text-align: right;
}

.bubble-right > .bubble-body {
  border-radius: 15px 15px 0 15px;
  color: white;
  float: right;
  align-self: flex-end;
}

.bubble-right > .bubble-timestamp {
  text-align: right;
}

.header-shadow{
  box-shadow: 0 10px 10px -6px rgb(232, 232, 232);
}

